--- a/index.html
+++ b/index.html
@@ -11,283 +11,24 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.jpg">
     <title>De schoonheidsspecialiste Carla Westerbeek heeft huidverbetering en schoonheidsbehandelingen samengevoegd in Scarabee.</title>
 
-    <link rel="canonical" href="http://www.schoonheidsinstituut-scarabee.nl">
+    <link rel="canonical" href="//www.schoonheidsinstituut-scarabee.nl">
 
     <link rel='dns-prefetch' href='//netdna.bootstrapcdn.com'/>
     <link rel='dns-prefetch' href='//cdnjs.cloudflare.com'/>
     <link rel='dns-prefetch' href='//maxcdn.bootstrapcdn.com'/>
     <link rel='dns-prefetch' href='//s.w.org'/>
-    <script type="text/javascript">
-        window._wpemojiSettings = {"baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/11.2.0\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/11.2.0\/svg\/", "svgExt": ".svg", "source": {"concatemoji": "http:\/\/proposure.nl\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.1.3"}};
-        !function (a, b, c) {
-            function d(a, b) {
-                var c = String.fromCharCode;
-                l.clearRect(0, 0, k.width, k.height), l.fillText(c.apply(this, a), 0, 0);
-                var d = k.toDataURL();
-                l.clearRect(0, 0, k.width, k.height), l.fillText(c.apply(this, b), 0, 0);
-                var e = k.toDataURL();
-                return d === e
-            }
-
-            function e(a) {
-                var b;
-                if (!l || !l.fillText) return !1;
-                switch (l.textBaseline = "top", l.font = "600 32px Arial", a) {
-                    case"flag":
-                        return !(b = d([55356, 56826, 55356, 56819], [55356, 56826, 8203, 55356, 56819])) && (b = d([55356, 57332, 56128, 56423, 56128, 56418, 56128, 56421, 56128, 56430, 56128, 56423, 56128, 56447], [55356, 57332, 8203, 56128, 56423, 8203, 56128, 56418, 8203, 56128, 56421, 8203, 56128, 56430, 8203, 56128, 56423, 8203, 56128, 56447]), !b);
-                    case"emoji":
-                        return b = d([55358, 56760, 9792, 65039], [55358, 56760, 8203, 9792, 65039]), !b
-                }
-                return !1
-            }
-
-            function f(a) {
-                var c = b.createElement("script");
-                c.src = a, c.defer = c.type = "text/javascript", b.getElementsByTagName("head")[0].appendChild(c)
-            }
-
-            var g, h, i, j, k = b.createElement("canvas"), l = k.getContext && k.getContext("2d");
-            for (j = Array("flag", "emoji"), c.supports = {everything: !0, everythingExceptFlag: !0}, i = 0; i < j.length; i++) c.supports[j[i]] = e(j[i]), c.supports.everything = c.supports.everything && c.supports[j[i]], "flag" !== j[i] && (c.supports.everythingExceptFlag = c.supports.everythingExceptFlag && c.supports[j[i]]);
-            c.supports.everythingExceptFlag = c.supports.everythingExceptFlag && !c.supports.flag, c.DOMReady = !1, c.readyCallback = function () {
-                c.DOMReady = !0
-            }, c.supports.everything || (h = function () {
-                c.readyCallback()
-            }, b.addEventListener ? (b.addEventListener("DOMContentLoaded", h, !1), a.addEventListener("load", h, !1)) : (a.attachEvent("onload", h), b.attachEvent("onreadystatechange", function () {
-                "complete" === b.readyState && c.readyCallback()
-            })), g = c.source || {}, g.concatemoji ? f(g.concatemoji) : g.wpemoji && g.twemoji && (f(g.twemoji), f(g.wpemoji)))
-        }(window, document, window._wpemojiSettings);
-    </script>
-    <style type="text/css">
-        img.wp-smiley,
-        img.emoji {
-            display: inline !important;
-            border: none !important;
-            box-shadow: none !important;
-            height: 1em !important;
-            width: 1em !important;
-            margin: 0 .07em !important;
-            vertical-align: -0.1em !important;
-            background: none !important;
-            padding: 0 !important;
-        }
-    </style>
 
     <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' type='text/css' media='all'/>
     <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='assets/css/style.min.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='assets/css/bootstrap-ext.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='assets/css/proposure.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='assets/css/options-317.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='assets/css/style-317.css' type='text/css' media='all'/>
+    <link rel='stylesheet' href='assets/css/bootstrap.css' type='text/css' media='all'/>
+    <link rel='stylesheet' href='assets/css/main.css' type='text/css' media='all'/>
 
     <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js'></script>
     <script type='text/javascript' src='assets/js/jquery.js'></script>
     <script type='text/javascript' src='assets/js/jquery-migrate.min.js'></script>
     <script type='text/javascript' src='assets/js/public.js'></script>
     <script type='text/javascript' src='assets/js/proposure.js'></script>
-    <script type="text/javascript">
-        jQuery(function ($) {
-            $(window).on('load', function () {
-                $("#rindu-team .teams").equalizeHeights();
-            });
-        });
-    </script>
-    <script type="text/javascript">
-    </script>
 
-    <style type="text/css">
-        body {
-            color: #333333;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            color: #0a275f;
-        }
-
-        .main-color, .totop:hover span > a.hover {
-            color: #2da39f;
-        }
-
-        #rindu-fill {
-            display: none;
-        }
-
-        #bootstack-pricing .panel-title {
-            font-weight: 400 !important;
-            font-size: 12px;
-        }
-
-        #contact-form div.col-md-6:first-child {
-        / / display: none;
-        }
-
-        #content-section-1 .mg-sm, #content-section-2 .mg-sm {
-            text-align: center;
-        }
-
-
-        #simple-carousel .col-md-15 > .thumbnail:first-child,
-        #simple-carousel .col-sm-15 > .thumbnail:first-child {
-            margin-left: 5px;
-        }
-
-        #simple-carousel .col-md-15 > .thumbnail:last-child,
-        #simple-carousel .col-sm-15 > .thumbnail:last-child {
-            margin-right: 5px;
-        }
-
-        #modest-banner .callbacks_here a:after {
-            border: 2px solid #dd2528 !important;
-        }
-
-        #modest-banner {
-            width: 100%;
-        }
-
-
-        .spacer.big {
-            height: 40px;
-        }
-
-
-        .panel-default > .panel-heading {
-            color: #ffffff;
-            background-color: #2da39f;
-        }
-
-        #content-carousel .section-wrapper .row {
-            background-color: #ffffff;
-        }
-
-        #rindu-team .teams .pict {
-            margin: 50px;
-        }
-
-        #section-inner.section-team.col-sm-4.col-xs6.mg-sm {
-            margin-top: 20px;
-        }
-
-        section[id^="rindu-fill"] .section-title .title {
-            font-weight: 400;
-        }
-
-        .spacer.medium {
-            heigth: 0px;
-        }
-
-
-        #rindu-features .section-wrapper {
-            background-repeat: no-repeat;
-        }
-
-        #rindu-features .section-title .title {
-            text-align: right;
-            background-color: rgba(232, 253, 2460, 0.5);
-        }
-
-        #rindu-features p {
-            background-color: rgba(232, 253, 2460, 0.5);
-        }
-
-        #rindu-features .section-title .subtitle {
-            background-color: rgba(232, 253, 2460, 0.5);
-            text-align: right;
-        }
-
-
-        #content-section {
-            position: relative;
-            z-index: 2;
-            padding-bottom: 80px;
-        }
-
-        #content-section .section-wrapper {
-            padding-top: 100px;
-            text-align: center;
-        }
-
-        #content-section .section-title {
-            text-align: center;
-            position: relative;
-            z-index: 2;
-        }
-
-        #content-section .section-title .title {
-            font-size: 40px;
-            line-height: 60px;
-            letter-spacing: -1px;
-            margin-bottom: 0;
-        }
-
-        #content-section .section-title .subtitle {
-            font-size: 20px;
-            font-weight: 300;
-            line-height: 28px;
-            margin-top: 0;
-        }
-
-        #content-section .title-break {
-            border-top: 3px solid #CCC;
-            width: 80px;
-            margin: 40px auto 40px auto;
-            display: inline-block;
-        }
-
-        #content-section .left-icon {
-            text-align: left;
-            position: relative;
-            padding-left: 60px;
-            margin-bottom: 10px;
-        }
-
-        #content-section .left-icon h4 {
-            margin-bottom: 0;
-            margin-top: 20px;
-        }
-
-        #content-section .left-icon .icon {
-            position: absolute;
-            left: 0px;
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            line-height: 43px;
-            text-align: center;
-            color: #FFF;
-            font-size: 20px;
-        }
-
-        #content-section .left-icon .icon {
-            background-color: #2da39f;
-        }
-
-        #content-section .section-wrapper {
-            padding-top: 0;
-        }
-
-        #content-section .spacer.big {
-            height: 0;
-        }
-
-        #bootstack-pricing .panel-custom > .panel-heading {
-            min-height: 50px;
-        }
-
-        #rindu-team p {
-            font-size: 20px;
-            line-height: 28px
-        }
-
-        #rindu-team .mg-sm {
-            width: 100% !important;
-            margin-left: 0 !important;
-        }
-
-        #rindu-team .teams .desc, #form_317 {
-            display: none;
-        }
-
-    </style>
     <meta property="og:image" content=""/>
     <meta property="og:title" content="De schoonheidsspecialiste Carla Westerbeek heeft huidverbetering en schoonheidsbehandelingen samengevoegd in Scarabee."/>
     <meta property="og:url" content="http://www.schoonheidsinstituut-scarabee.nl"/>
