changed temp image

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="row">
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/istockphoto-1199703359-1024x1024.jpg">
+                                <img src="assets/img/wellness-285590_640.jpg">
                                 <div class="caption">
                                     <h2>Anti Aging</h2>
                                     <h4><strong>Nieuw</strong></h4>
@@ -169,7 +169,7 @@
                         </div>
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/istockphoto-1199703359-1024x1024.jpg">
+                                <img src="assets/img/wellness-285590_640.jpg">
                                 <div class="caption">
                                     <h2>Rex-KARA Deep therapy</h2>
                                     <h4><strong>Nieuw</strong></h4>
@@ -179,7 +179,7 @@
                         </div>
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/istockphoto-1199703359-1024x1024.jpg">
+                                <img src="assets/img/wellness-285590_640.jpg">
                                 <div class="caption">
                                     <h2>Omnylux Revive</h2>
                                     <h4><strong>Light therapy</strong></h4>
@@ -197,7 +197,7 @@
                     <div class="row">
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/istockphoto-1199703359-1024x1024.jpg">
+                                <img src="assets/img/wellness-285590_640.jpg">
                                 <div class="caption">
                                     <h2>Diskneedle therapy</h2>
                                     <p>Onze nieuwe Diskneedle therapy stimuleert de natuurlijke productie van collageen en elastine. Ook verhoogt het de opname van werkzame producten en verbetert uw huidstructuur. Door de verbetering van de huidelasticiteit krimpen uw poriën en verminderen de fijne lijntjes.</p>
@@ -207,7 +207,7 @@
                         </div>
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/istockphoto-1199703359-1024x1024.jpg">
+                                <img src="assets/img/wellness-285590_640.jpg">
                                 <div class="caption">
                                     <h2>Laserbehandelingen<br></h2>
                                     <p>Voor o.a. definitieve ontharing, steelwratjes, pigment en couperoze. Onze professionele huidtherapeut informeert u over de tarieven en de voor u geschikte behandeling</p>
@@ -216,7 +216,7 @@
                         </div>
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/istockphoto-1199703359-1024x1024.jpg">
+                                <img src="assets/img/wellness-285590_640.jpg">
                                 <div class="caption"><h2>T-Away<br></h2>
                                     <p>Verwijdert steelwratjes, couperoze & spider-navy. </p>
                                     <p><strong>Per 15 minuten: €25,-</strong></p>
@@ -228,7 +228,7 @@
                     <div class="row">
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/istockphoto-1199703359-1024x1024.jpg">
+                                <img src="assets/img/wellness-285590_640.jpg">
                                 <div class="caption">
                                     <h2>Microdermasie<br></h2>
                                     <p>Een doorbraak in de huidverzorging. Een fijne straal steriele kristallen verwijderd de oppervlakkige huid zodat fijne lijntjes/littekens vervagen enwerkstoffenbeter worden opgenomen. Aanmaak van collageen wordt gestimuleerd. Aansluitend collageenvlies of rubber modelage, voor een perfect resultaat.</p>
@@ -360,10 +360,10 @@
                                 <div class="left-content">
                                     <h4><strong>Kleine losse behandelingen</strong></h4>
                                         <table>
-                                            <tr>
+                                            <stocktr>
                                                 <td>Harsen onderbenen</td>
                                                 <td>€ 28,50</td>
-                                            </tr>
+                                            </stocktr>
                                             <tr>
                                                 <td>Harsen hele benen</td>
                                                 <td>€ 51,50</td>
