carousel update and images

--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
 
     <section id="rindu-footer">
         <footer class="footer section-wrapper">
-            <p class="copyright">&copy; Copyright © Schoonheidsinstituut Scarabee 2021</p>
+            <p class="copyright">&copy; Copyright © Schoonheidsinstituut Scarabee</p>
         </footer>
     </section>
 
