--- a/index.html
+++ b/index.html
@@ -404,10 +404,10 @@
                             <div class="col-sm-4">
                                 <div class="slide-box">
                                     <a href="https://www.payot.com/NL/nl" class="thumbnail" target="_blank">
-                                        <img src="assets/img/" class="img-reponsive" alt="Image">
+                                        <img src="assets/img/payot.png" class="img-reponsive" alt="Image">
                                     </a>
                                     <div class="caption">
-                                        <h4>Payot</h4>
+                                        <p></p>
                                     </div>
                                 </div>
                             </div>
