--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="row">
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/wellness-285590_640.jpg">
+                                <img src="">
                                 <div class="caption">
                                     <h2>Anti Aging</h2>
                                     <h4><strong>Nieuw</strong></h4>
@@ -181,7 +181,7 @@
                         </div>
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/wellness-285590_640.jpg">
+                                <img src="">
                                 <div class="caption">
                                     <h2>Omnylux Revive</h2>
                                     <h4><strong>Light therapy</strong></h4>
@@ -199,7 +199,7 @@
                     <div class="row">
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/wellness-285590_640.jpg">
+                                <img src="">
                                 <div class="caption">
                                     <h2>Diskneedle therapy</h2>
                                     <p>Onze nieuwe Diskneedle therapy stimuleert de natuurlijke productie van collageen en elastine. Ook verhoogt het de opname van werkzame producten en verbetert uw huidstructuur. Door de verbetering van de huidelasticiteit krimpen uw poriën en verminderen de fijne lijntjes.</p>
@@ -209,7 +209,7 @@
                         </div>
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/wellness-285590_640.jpg">
+                                <img src="">
                                 <div class="caption">
                                     <h2>Laserbehandelingen<br></h2>
                                     <p>Voor o.a. definitieve ontharing, steelwratjes, pigment en couperoze. Onze professionele huidtherapeut informeert u over de tarieven en de voor u geschikte behandeling</p>
@@ -218,7 +218,7 @@
                         </div>
                         <div class="col-sm-4 mg-sm">
                             <div class="thumbnail">
-                                <img src="assets/img/wellness-285590_640.jpg">
+                                <img src="">
                                 <div class="caption"><h2>T-Away<br></h2>
                                     <p>Verwijdert steelwratjes, couperoze & spider-navy. </p>
                                     <p><strong>Per 15 minuten: €25,-</strong></p>
@@ -418,7 +418,7 @@
                             <div class="col-sm-4">
                                 <div class="slide-box">
                                     <a href="https://www.alessandro-international.com/b2b_de_nl/" class="thumbnail" target="_blank">
-                                        <img src="assets/img/" class="img-reponsive" alt="Image">
+                                        <img src="" class="img-reponsive" alt="Image">
                                     </a>
                                     <div class="caption">
                                         <h4>Allesandro</h4>
