--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
     </nav>
 
     <section id="modest-banner">
-        <div id="top" class="callbacks_container">
+        <div id="top" class="callbacks_container" style="background-image: url(assets/img/header2016_1.jpg)">
             <ul class="rslides" id="mb-slider">
                 <li>
-                    <img src="assets/img/header2016_1.jpg">
                     <div class="img-overlay-solid"></div>
                     <div class="caption bounceInDown" data-wow-delay="0.4s">
                         <div class="slide-text-info">
@@ -104,7 +103,6 @@
                     </div>
                 </li>
                 <li>
-                    <img src="assets/img/header2016_2.jpg">
                     <div class="img-overlay-solid"></div>
                     <div class="caption bounceInDown" data-wow-delay="0.4s">
                         <div class="slide-text-info">
@@ -336,7 +334,7 @@
         </div>
     </section>
 
-    <section id="simple-carousel">
+    <section id="simple-carousel" class="hidden-xs">
         <div class="section-wrapper">
             <div class="section-title">
                 <h2 class="title " data-effect="fadeInDown">Merken</h2>
@@ -652,7 +650,7 @@
             <div class="section-inner">
                 <div class="container">
                     <div class="section-title">
-                        <h2 class="title " data-effect="fadeInDown">Kennismakingsbehandeling: It is time to peel</h2>
+                        <h2 class="title " data-effect="fadeInDown">Kennismakingsbehandeling: <br>It is time to peel</h2>
                         <h4 class="subtitle " data-effect="fadeInUp">Graag wil ik je huid laten kennismaken met <strong>GYM FOR THE SKIN</strong>! Deze PLATINUM workout van het nieuwe merk <a href="http://www.asapskinproducts.com/" target="_blank">ASAP uit Australië</a> geeft direct resultaat!!</h4>
                     </div>
                     <hr class="title-break">
